--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,4 @@
-.route--active {
-  font-weight: bold;
-  text-decoration: underline;
+.app-toolbar {
+  background-color: rgb(0, 188, 212) !important;
+  height: 64px !important;
 }
