Added the add workout button

--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -1,3 +1,8 @@
 .core-layout__viewport {
   padding-top: 4rem;
 }
+.app-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
