--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -5,4 +5,11 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  .main-container {
+    padding: 0 24px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
 }
