--- a/src/routes/AddWorkout/components/AddWorkout.scss
+++ b/src/routes/AddWorkout/components/AddWorkout.scss
@@ -3,3 +3,18 @@
   display: flex;
   flex-direction: column;
 }
+
+.workout-form {
+  flex-grow: 1;
+  overflow-x: hidden;
+  position: relative;
+  .floating-action-container {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    .action-button {
+      margin-right: 20px;
+    }
+  }
+
+}
