Some router and auth setup

--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -1,7 +1,7 @@
 .core-layout__viewport {
   padding-top: 4rem;
 }
-.app-container {
+.core-container {
   height: 100%;
   display: flex;
   flex-direction: column;
