Workout list and workout card components

--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -1,5 +1,6 @@
 .home-index-container {
   flex-grow: 1;
+  padding: 20px;
   .floating-action-container {
     margin-right: 20px;
     position: absolute;
